# API_tg_bot

./: Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: api.py  config.py  di.py  get_data_from_api.py  main.py  test.py
bot/: handlers.py  keyboards.py
db/: database.py  models.py  repositories.py
src/: api.py  config.py  main.py
src/app/: api.py  config.py  db.py  handlers.py  main.py  models.py
src/app/include/: keyboards.py
src/bot/: handlers.py
src/bot/include/: texts.py
src/db/: database.py  models.py  schemas.py
